fixing menu on iPhone/iPad

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -244,7 +244,7 @@ body{
     background: #f4f4f4; /* Old browsers */
 
     width: 100%;
-    min-height: 480px;
+
     overflow: auto;
 
     -moz-border-radius: 5px;
@@ -1310,8 +1310,6 @@ p#achievementDescription{
     html,body{height:100%;}
 
     html>body #page{height:auto; min-height:100%;}
-
-   body { min-height: 900px; }
 
     #leftcontainer{
         display: none;
